force-app/main/default/objects/Log_Event__e/fields/Apex_class__c.field-meta.xml
<CustomField>
    <fullName>Apex_class__c</fullName>
    <label>Apex class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>