force-app/main/default/objects/Log_Event__e/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>