force-app/main/default/objects/Log_Event__e/fields/Detailed_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Error_Message__c</fullName>
    <label>Detailed Error Message</label>
    <length>32678</length>
    <type>LongTextArea</type>
</CustomField>