force-app/main/default/objects/Log_Event__e/fields/Detailed_Information__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Information__c</fullName>
    <label>Detailed Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>