force-app/main/default/objects/Log_Event__e/fields/Http_Body__c.field-meta.xml
<CustomField>
    <fullName>Http_Body__c</fullName>
    <label>Http Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>