force-app/main/default/objects/Log_Event__e/fields/Http_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Http_Endpoint__c</fullName>
    <label>Http Endpoint</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>