force-app/main/default/objects/Log_Event__e/fields/Http_Headers__c.field-meta.xml
<CustomField>
    <fullName>Http_Headers__c</fullName>
    <label>Http Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>