force-app/main/default/objects/Log_Event__e/fields/Http_Type__c.field-meta.xml
<CustomField>
    <fullName>Http_Type__c</fullName>
    <label>Http Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>