force-app/main/default/objects/Log_Event__e/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>