force-app/main/default/objects/Log_Event__e/fields/Matched_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Matched_Record_Id__c</fullName>
    <label>Matched Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>