force-app/main/default/objects/Log_Event__e/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <label>Record Ids</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>