force-app/main/default/objects/Log_Event__e/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>will hold the related lookup record or another referenced record</description>
    <label>Related Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>