force-app/main/default/objects/Log_Event__e/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Session Id from integration with Similarweb&apos;s website.</description>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>