force-app/main/default/objects/Log_Event__e/fields/SF_Type__c.field-meta.xml
<CustomField>
    <fullName>SF_Type__c</fullName>
    <label>SF Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>