force-app/main/default/objects/Log_Event__e/fields/sObjectId_Created__c.field-meta.xml
<CustomField>
    <fullName>sObjectId_Created__c</fullName>
    <description>will contain task or lead or contact or campaign id</description>
    <label>sObjectId Created</label>
    <length>30</length>
    <type>Text</type>
</CustomField>